ProgressBar CSS consolidation, refs #392:  - Add a LESS variable @height for consistency with @line-height. These two variables control the default height of the widget and the default vertical position of the text  - Ensure inner font size inherit the widget font-size  - Add some comments, remove a "overflow:hidden" not needed

--- a/ProgressBar/themes/bootstrap/variables.less
+++ b/ProgressBar/themes/bootstrap/variables.less
@@ -1,2 +1,3 @@
-@transition-params: 0.3s linear 0s;
-@line-height: 1.6em;
+@height: 1.8em; // Controls the height of the widget (180% of the font-size)
+@line-height: 1.6em; // Controls the vertical position of the text
+@transition-params: 0.3s linear 0s; // Controls the animation
